fix spacing

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -23,7 +23,7 @@
     width: 0;
   }
   to {
-    width: 8em;
+    width: 10em;
   }
 }
 
